# D3CFR

./: CMakeLists.txt  d2cfr_model.pth  pybind_wrapper.cpp  setup.py
cpp_src/: DeepMCCFR.cpp  DeepMCCFR.hpp  InferenceQueue.hpp  SharedReplayBuffer.hpp  board.hpp  constants.hpp  game_state.cpp  game_state.hpp  hand_evaluator.hpp  request_manager.hpp
python_src/: model.py  replay_buffer.py  train.py
